objects/Get_Feedback__c.object
<CustomObject><fields>
        <fullName>ASP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Academic Support Project</label>
        <referenceTo>Academic_Support_Project__c</referenceTo>
        <relationshipLabel>Get Feedback</relationshipLabel>
        <relationshipName>Get_Feedback</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>llok up to the accoutn from teh Get Feedback object</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Get Feedback</relationshipLabel>
        <relationshipName>Get_Feedback</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Additional_Comments__c</fullName>
        <description>Book Promo Survey Results</description>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Amazon_listing__c</fullName>
        <description>Book Promo Survey Results</description>
        <label>Amazon listing</label>
        <length>250</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Author1_Info_Company_University__c</fullName>
        <description>Book Promo Survey Results</description>
        <label>Author1 Info - Company/University</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Author1_Info_Last_Name__c</fullName>
        <description>Book Promo Survey Results</description>
        <label>Author1 Info - Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Author1_Info_Middle_Name__c</fullName>
        <description>Book Promo Survey Results</description>
        <label>Author1 Info - Middle Name</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Author2_Info_Company_University__c</fullName>
        <description>Book Promo Survey Results</description>
        <label>Author2 Info - Company/University</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Author2_Info_First_Name__c</fullName>
        <description>Book Promo Survey Results</description>
        <label>Author2 Info - First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Author2_Info_Last_Name__c</fullName>
        <description>Book Promo Survey Results</description>
        <label>Author2 Info - Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Author2_Info_Middle_Name__c</fullName>
        <description>Book Promo Survey Results</description>
        <label>Author2 Info - Middle Name</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Author_Info__c</fullName>
        <description>Book Promo Survey Results</description>
        <label>Author1 Info - First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Author_s_License__c</fullName>
        <description>this is a licnse that will be used to include in an email when the Survey to the COntact is sent for the License Renewal</description>
        <inlineHelpText>This may not be an accurate license number associated with the contact.  This license is only used in an email template</inlineHelpText>
        <label>Author's License</label>
        <length>15</length>
        <type>Text</type>
    </fields><fields>
        <fullName>BookProject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>look up from Get Feedback to Get Feedback</description>
        <label>Book Project</label>
        <referenceTo>Book_Project__c</referenceTo>
        <relationshipLabel>Get Feedback</relationshipLabel>
        <relationshipName>Get_Feedback</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Book_Info_Copyright_Year__c</fullName>
        <description>Book Promo Survey Results</description>
        <label>Book Info - Copyright Year</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Book_Info_English_Title__c</fullName>
        <description>Book Promo Survey Results</description>
        <label>Book Info - English Title</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Book_Info_Full_Title_of_Book__c</fullName>
        <description>Book Prom Survey rResults</description>
        <label>Book Info - Full Title of Book</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Book_Info_ISBN_13__c</fullName>
        <description>Book Promo Survey Results</description>
        <label>Book Info - ISBN - 13</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Book_Info_Language__c</fullName>
        <description>Book Promo Survey Results</description>
        <label>Book Info - Language</label>
        <length>25</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Book_Title__c</fullName>
        <formula>BookProject__r.Book_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Book Title</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Book_Title_and_Edition_Number_Confirm__c</fullName>
        <description>Author License</description>
        <label>Book Title and Edition Number (Confirm)</label>
        <length>750</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Book_Title_and_Edition_Number__c</fullName>
        <description>author license</description>
        <label>Book Title and Edition Number</label>
        <length>750</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Book_Topic_Covered_1__c</fullName>
        <description>Book Promo Survey Results</description>
        <label>Book Topic Covered 1</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Book_Topic_Covered_2__c</fullName>
        <description>Book Promo Survey Results</description>
        <label>Book Topic Covered 2</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Book_Topic_Covered_3__c</fullName>
        <description>Book Promo Survey Results</description>
        <label>Book Topic Covered 3</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Bug_Report_BugID__c</fullName>
        <description>To capture the Bug Report ID that the survey is completed for</description>
        <inlineHelpText>To capture the Bug Report ID that the survey is completed for</inlineHelpText>
        <label>Bug Report - BugID</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Bug_Report_How_to_improve_report__c</fullName>
        <description>What can we do to improve the quality of this bug report?</description>
        <inlineHelpText>What can we do to improve the quality of this bug report?</inlineHelpText>
        <label>Bug Report - How to improve report</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Bug_Report_MWA_ID__c</fullName>
        <description>Captures the MWA ID that is passed thru the Bug Report Survey</description>
        <inlineHelpText>Captures the MWA ID that is passed thru the Bug Report Survey</inlineHelpText>
        <label>Bug Report - MWA ID</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Bug_Report_Product__c</fullName>
        <description>The Product of the Bug Report from which the Survey was completed</description>
        <inlineHelpText>The Product of the Bug Report from which the Survey was completed</inlineHelpText>
        <label>Bug Report - Product</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Bug_Report_Reason_not_effective__c</fullName>
        <description>If you did not find this Bug Report effective, please select any of these that apply: (check all that apply)</description>
        <inlineHelpText>If you did not find this Bug Report effective, please select any of these that apply: (check all that apply)</inlineHelpText>
        <label>Bug Report - Reason not effective</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Bug_Report__c</fullName>
        <description>How effective was this Bug Report in answering your question?</description>
        <inlineHelpText>How effective was this Bug Report in answering your question?</inlineHelpText>
        <label>Bug Report - Effectiveness</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>to identify who the terms and conditions should be sent to for this account</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Get Feedback</relationshipLabel>
        <relationshipName>Get_Feedback</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Development_to_be_complete__c</fullName>
        <description>Pre-Product Survey</description>
        <label>Development to be complete</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Editor_Info_Email__c</fullName>
        <description>Book Promo Survey Results</description>
        <label>Editor Info - Email</label>
        <length>75</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Editor_Info_First_Name__c</fullName>
        <description>Book Promo Survey Results</description>
        <label>Editor Info - First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Editor_Info_Last_Name__c</fullName>
        <description>Book Promo Survey Results</description>
        <label>Editor Info - Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Editor_Info_Phone__c</fullName>
        <description>Book Promo Survey Results</description>
        <label>Editor Info - Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Expected_Publication_Date__c</fullName>
        <description>Author License</description>
        <label>Expected Publication Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Has_your_book_been_published__c</fullName>
        <description>Book Promo Survey results</description>
        <label>Has your book been published?</label>
        <length>5</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Is_license_still_needed__c</fullName>
        <description>Author License</description>
        <label>Is license still needed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Job_Title__c</fullName>
        <description>Author License</description>
        <label>Job Title</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>License_Survey_Received__c</fullName>
        <description>Author license</description>
        <label>License Survey Received</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>License_Survey_Status__c</fullName>
        <description>Author License</description>
        <label>License Survey Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Location_of_the_code_files__c</fullName>
        <description>Author License</description>
        <label>Location of the code files (confirm)</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>MathWorks_product1_were_used_to_create_t__c</fullName>
        <description>Book Promo Survey Results</description>
        <label>MathWorks product1 were used to create t</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>MathWorks_product2_were_used_to_create_t__c</fullName>
        <description>Book Promo Survey Results</description>
        <label>MathWorks product2 were used to create t</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>MathWorks_product3_were_used_to_create_t__c</fullName>
        <description>Book Promo Survey Results</description>
        <label>MathWorks product3 were used to create t</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>One_sentence_summary_of_the_bookBook_Pro__c</fullName>
        <description>Book Promo Survey Results</description>
        <label>One-sentence summary of the bookBook Pro</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Partner_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Agreement</label>
        <referenceTo>Partner_Agreement__c</referenceTo>
        <relationshipLabel>Get Feedback</relationshipLabel>
        <relationshipName>Get_Feedback</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Pre_Product_Available_references__c</fullName>
        <description>Pre-Product Survey</description>
        <label>Pre-Product:  Available references</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Pre_Product_Email__c</fullName>
        <description>Pre-Product Survey</description>
        <label>Pre-Product:  Email</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Pre_Product_Name__c</fullName>
        <description>Pre-Product Survey</description>
        <label>Pre-Product:  Name</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Pre_Product_Ref_1_Company__c</fullName>
        <description>Pre-Product Survey</description>
        <label>Pre-Product: Ref 1 Company</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Pre_Product_Ref_1_Email__c</fullName>
        <description>Pre-Product Survey</description>
        <label>Pre-Product: Ref 1 Email</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Pre_Product_Ref_1_Name__c</fullName>
        <description>Pre-Product Survey</description>
        <label>Pre-Product:  Ref 1 Name</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Pre_Product_Ref_2_Company__c</fullName>
        <description>Pre-Product Survey</description>
        <label>Pre-Product: Ref 2 Company</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Pre_Product_Ref_2_Email__c</fullName>
        <description>Pre-Product Survey</description>
        <label>Pre-Product: Ref 2 Email</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Pre_Product_Ref_2_Name__c</fullName>
        <description>Pre-Product Survey</description>
        <label>Pre-Product: Ref 2 Name</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Prerelease_Activation_Date__c</fullName>
        <description>Date the Customer activated the Prerelease</description>
        <inlineHelpText>Date the Customer activated the Prerelease</inlineHelpText>
        <label>Prerelease - Activation Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Prerelease_Ease_of_Transition__c</fullName>
        <description>Ease of Transition</description>
        <label>Prerelease - Ease of Transition</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Prerelease_OS_Platform__c</fullName>
        <description>prerelease survey</description>
        <label>Prerelease - OS/Platform</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Prerelease_Overall_Experience__c</fullName>
        <description>Overall Experience</description>
        <label>Prerelease - Overall Experience</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Prerelease_Performance__c</fullName>
        <description>prerelease survey</description>
        <label>Prerelease - Performance</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Prerelease_Stability__c</fullName>
        <description>prerelease survey</description>
        <label>Prerelease - Stability</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Prerelease_Survey_Date_Survey_Received__c</fullName>
        <description>Get Feedback to update this date when the Survey is received</description>
        <inlineHelpText>Get Feedback to update this date when the Survey is received</inlineHelpText>
        <label>Prerelease Survey - Date Survey Received</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Prerelease_Survey_Prerelease__c</fullName>
        <description>Identify the Prerelease the survey was sent for</description>
        <inlineHelpText>Identify the Prerelease the survey was sent for</inlineHelpText>
        <label>Prerelease Survey - Prerelease</label>
        <length>25</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Prerelease_Survey_Send_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prerelease Survey - indicator to send the survey via email</description>
        <inlineHelpText>Prerelease Survey - indicator to send the survey via email</inlineHelpText>
        <label>Prerelease Survey - Send Survey</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Prerelease_Upgrade_when__c</fullName>
        <description>Prerelease syrvey</description>
        <label>Prerelease - Upgrade when?</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Prerelease_Upgrade_when_comments__c</fullName>
        <description>Prerelease Survey</description>
        <label>Prerelease - Upgrade when comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Prerelease_comment_on_experience__c</fullName>
        <description>Prerelease survey</description>
        <label>Prerelease - comment on experience</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Prerelease_crash_issues__c</fullName>
        <description>prerelease survey</description>
        <label>Prerelease - crash / issues?</label>
        <length>25</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Prerelease_previous_release__c</fullName>
        <description>prerelease survey</description>
        <label>Prerelease - Previous release</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Prerelesae_Incompatibility_comment__c</fullName>
        <description>Prerelease survey</description>
        <label>Prerelease - Incompatibility comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Prerelesae_incompatibility_encountered__c</fullName>
        <description>prerelease survey</description>
        <label>Prerelease - Incompatibility encountered</label>
        <length>25</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Primary_audience_for_the_book__c</fullName>
        <description>Book Promo Survey</description>
        <label>Primary audience for the book</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Graduate students</fullName>
                </value>
                <value>
                    <fullName>Undergraduate students</fullName>
                </value>
                <value>
                    <fullName>Professionals</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Product1_used_in_Book__c</fullName>
        <description>Book Promo Survey Results</description>
        <label>Product1 used in Book</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Product2_used_in_Book__c</fullName>
        <description>Book Promo Survey Results</description>
        <label>Product2 used in Book</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Product3_used_in_Book__c</fullName>
        <description>Book Promo Survey Results</description>
        <label>Product3 used in Book</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Publisher_Info_Web_Page__c</fullName>
        <description>Book Promo Survey Results</description>
        <label>Publisher Info - Web Page</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Publisher_Info__c</fullName>
        <description>Book Promo Survey Results</description>
        <label>Publisher Info - Company</label>
        <length>75</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Publisher_Info_web_site__c</fullName>
        <description>Book Promo Survey Results</description>
        <label>Publisher Info - web site</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Publisher__c</fullName>
        <description>Author License</description>
        <label>Publisher</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Purpose_of_the_license__c</fullName>
        <description>Author license</description>
        <label>Purpose of the license</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I am actively planning or developing a book project or new edition</fullName>
                </value>
                <value>
                    <fullName>I am maintaining content and/or code files for an existing published book project that is part of the MathWorks Book Program</fullName>
                </value>
                <value>
                    <fullName>I am an editor at a publishing company</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Reason_for_not_accepting_T_C_s__c</fullName>
        <description>Partners and Connections - indicates why they did not accept the T&amp;C's</description>
        <label>Reason for not accepting T&amp;C's</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Relevant_Industries__c</fullName>
        <description>Book Promo Survey Results</description>
        <label>Relevant Industries</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aerospace and Defense</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Biotech and Pharmaceutical</fullName>
                </value>
                <value>
                    <fullName>Chemical and Petroleum</fullName>
                </value>
                <value>
                    <fullName>Computer Electronics</fullName>
                </value>
                <value>
                    <fullName>Communication Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Communication Devices</fullName>
                </value>
                <value>
                    <fullName>Consumer Goods</fullName>
                </value>
                <value>
                    <fullName>Consumer Electronics</fullName>
                </value>
                <value>
                    <fullName>Earth and Ocean Sciences</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Food and Beverage</fullName>
                </value>
                <value>
                    <fullName>Industrial Automation and Machinery</fullName>
                </value>
                <value>
                    <fullName>Instrumentation</fullName>
                </value>
                <value>
                    <fullName>Medical Devices</fullName>
                </value>
                <value>
                    <fullName>Metals, Materials, and Mining</fullName>
                </value>
                <value>
                    <fullName>Pulp and Paper</fullName>
                </value>
                <value>
                    <fullName>Railway Systems</fullName>
                </value>
                <value>
                    <fullName>Rails, Ships and Other Transportation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Sales_Support_Approved_Product_is__c</fullName>
        <description>CNX Sales Support Survey</description>
        <label>Sales Support  - Approved Product is?</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Sales_Support_Comments__c</fullName>
        <description>CNX Sales Support Survey</description>
        <label>Sales Support - Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Sales_Support_Demo_to_AE_Users__c</fullName>
        <description>CNX Sales Support Survey</description>
        <label>Sales Support - Demo to AE Users</label>
        <length>25</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Sales_Support_Demo_to_Marketing_Users__c</fullName>
        <description>CNX Sales Support Survey</description>
        <label>Sales Support - Demo to Marketing Users</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Sales_Support_Demo_to_Other_Users__c</fullName>
        <description>CNX Sales Support Survey</description>
        <label>Sales Support - Demo to Other Users</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Sales_Support_Demo_to_Sales_Users__c</fullName>
        <description>CNX Sales Support Survey</description>
        <label>Sales Support - Demo to Sales Users</label>
        <length>25</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Sales_Support_How_You_Distribute_Demos__c</fullName>
        <description>CNX Sales Support Survey</description>
        <label>Sales Support - How You Distribute Demos</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Sales_Support_How_You_Promote_MW__c</fullName>
        <description>CNX Sales Support Survey</description>
        <label>Sales Support - How You Promote MW</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Sales_Support_How_You_Train_employees__c</fullName>
        <description>CNX Sales Support Survey</description>
        <label>Sales Support - How You Train employees</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Sales_Support_Key_Account_1__c</fullName>
        <description>CNX Sales Support Survey</description>
        <label>Sales Support - Key Account 1</label>
        <length>150</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Sales_Support_Key_Account_2__c</fullName>
        <description>CNX Sales Support Survey</description>
        <label>Sales Support - Key Account 2</label>
        <length>250</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Sales_Support_Key_Account_3__c</fullName>
        <description>CNX Sales Support Survey</description>
        <label>Sales Support - Key Account 3</label>
        <length>250</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Sales_Support_MW_Products_You_Demo__c</fullName>
        <description>CNX Sales Support Survey</description>
        <label>Sales Support - MW Products You Demo</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Sales_Support_MW_Release__c</fullName>
        <description>CNX Sales Support Survey</description>
        <label>Sales Support - MW Release</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Sales_Support_MW_benefits__c</fullName>
        <description>CNX Sales Support Survey</description>
        <label>Sales Support - MW benefits</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Sales_Support_Primary_Industry_cont__c</fullName>
        <description>CNX Sales Support Survey</description>
        <label>Sales Support - Primary Industry (cont)</label>
        <length>250</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Sales_Support_Prinary_Industry__c</fullName>
        <description>CNX Sales Support Survey</description>
        <label>Sales Support - Prinary Industry</label>
        <length>250</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Sales_Support_Tool_Chains__c</fullName>
        <description>CNX Sales Support Survey</description>
        <label>Sales Support - Tool Chains</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Sales_Support_Trad_Shows_You_DId_a_Dem__c</fullName>
        <description>CNX Sales Support Survey</description>
        <label>Sales Support - Trad Shows You DId a Dem</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Sales_Support_Units_Shipped__c</fullName>
        <description>CNX Sales Support Survey</description>
        <label>Sales Support - Units Shipped</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Sales_Support_Where_You_Demo_MW__c</fullName>
        <description>CNX Sales Support Survey</description>
        <label>Sales Support - Where You Demo MW</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Sales_Support_Your_Total_New_Users__c</fullName>
        <description>CNX Sales Support Survey</description>
        <label>Sales Support - Your Total New Users</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Sales_Support_of_MW_demos__c</fullName>
        <description>CNX Sales Support Survey</description>
        <label>Sales Support - # of MW demos</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Sales_Support_of_Revenue_Commercial__c</fullName>
        <description>CNX Sales Support Survey</description>
        <label>Sales Support - % of Revenue(Commercial)</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Sales_Support_of_Revenue_Edu__c</fullName>
        <description>CNX Sales Support Survey</description>
        <label>Sales Support - % of Revenue(Edu)</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Sales_Support_of_Revenue_Gov__c</fullName>
        <description>CNX Sales Support Survey</description>
        <label>Sales Support - % of Revenue(Gov)</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Sales_Support_provide_info_E_mail__c</fullName>
        <description>CNX Sales Support Survey</description>
        <label>Sales Support - provide info - E-mail</label>
        <length>200</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Sales_Support_provide_your_info_Name__c</fullName>
        <description>CNX Sales Support Survey</description>
        <label>Sales Support - provide your info - Name</label>
        <length>150</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Send_Author_License_Renewal_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>when checked it will send a Contact License Renewal Surrvey</description>
        <label>Send Author License Renewal Survey</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Service_Accurate_understanding_rating__c</fullName>
        <label>Service - Accurate understanding rating</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Service_Additional_comments__c</fullName>
        <label>Service - Additional comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>    </recordTypes></CustomObject>